Bug 307827 - Does not show "You're online" after reconnect
Summary: Does not show "You're online" after reconnect
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-04 11:45 UTC by Martin Klapetek
Modified: 2012-10-04 17:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Klapetek 2012-10-04 11:45:02 UTC
When the connection drops, it prints "You are now offline", when it reconnects, it should show "You are now available/away/whatever", but it does not.
Comment 1 Martin Klapetek 2012-10-04 17:06:05 UTC
Git commit 8131e68532d74aba3d82c75d087566797e2bb891 by Martin Klapetek.
Committed on 04/10/2012 at 19:05.
Pushed by mklapetek into branch 'kde-telepathy-0.5'.

Call the onContactPresenceChange directly without connection checks

The connection status at this point is still Tp::ConnectionStatusDisconnected
and so the check for connection being Tp::ConnectionStatusConnected
would never pass, which leads to not printing the "You are now marked
as Available" line when reconnecting, leaving the "You are now offline"
as the last message in the chat.

The contact presence at this point is already correct, so we can
just bypass checking the connection and call it directly.

Reviewed-by: David Edmundson
FIXED-IN: 0.5.1

M  +2    -3    lib/chat-widget.cpp

http://commits.kde.org/telepathy-text-ui/8131e68532d74aba3d82c75d087566797e2bb891